--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <li class="button">
                         <a href="#menu" class="menu-toggle">Menu</a>
                         <ul class="dropdown">
-                            <li>A</li>
-                            <li>B</li>
-                            <li>C</li>
-                            <li>D</li>
+                            <li><a href="#profile">Profile</a></li>
+                            <li><a href="#resume">Resume</a></li>
+                            <li><a href="#blog">Blog</a></li>
+                            <li><a href="#story">Story</a></li>
                         </ul>
                     </li>
                     <li class="button"><a href="#introduction" class="nav-link">Introduction</a></li>
@@ -35,7 +35,7 @@
     <div class="container">
         <section id="introduction" class="section">
             <div class="intro-content">
-                <img src="images/self_pho3.jpg" alt="Blair Wang" class="intro-image">
+                <img src="../BlairWang/images/self_pho3.JPG" alt="Blair Wang" class="intro-image">
                 <div class="text-content">
                     <h2 class="main-title" onclick="showIntroductionPopup()">Introduction🎀</h2>
                     <h3>Hello! Welcome to my Blog🤖️</h3>
