add profile page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header class="header-section">
@@ -17,9 +18,9 @@
             </div>
                 <ul>
                     <li class="button">
-                        <a href="#menu" class="menu-toggle">Menu</a>
+                        <a href="index.html" class="menu-toggle">Menu</a>
                         <ul class="dropdown">
-                            <li><a href="#profile">Profile</a></li>
+                            <li><a href="profile.html">Profile</a></li>
                             <li><a href="#resume">Resume</a></li>
                             <li><a href="#blog">Blog</a></li>
                             <li><a href="#story">Story</a></li>
@@ -42,12 +43,7 @@
                     <p>Blair Wang | 🇨🇳 ➡️ 🇨🇦</p>
                     <p>🎓 Bsc | Kingston | QU | 23'</p>
                     <p>🎓 MEng | London | UWO | 24'</p>
-                    <p>🔧 Software engineer</p>
-                    <p>🔧 Frontend: JavaScript, HTML, CSS, React</p>
-                    <p>🔧 Backend: Node.js, ExpressJS, PHP, PostgreSQL, MongoDB, MySQL</p>
-                    <p>🔧 UX/UI: Figma, Adobe XD, Adobe Photoshop</p>
-                    <p>🔧 Testing & Others: GitHub, GitLab, BitBucket</p>
-                    <p>🔧 Methodologies: Agile</p>
+                    <p>🔧 Software engineer | Machine Learning Engineer | Data Engineer</p>
 
                     <div class="separator"></div> <!-- 分割线 -->
 
@@ -71,11 +67,21 @@
 
         <section id="contact" class="section">
             <h2 class="main-title" onclick="showIntroductionPopup2()">Contact</h2>
-            <p>Email: <a href="mailto:18jw111@gmail.com">18jw111@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/jingyi-wang-a5341b261/" target="_blank">Blair Wang</a></p>
+            <ul class="contact-icons">
+                <p><a href="https://www.linkedin.com/in/jingyi-wang-a5341b261/"><i class="fab fa-linkedin-in"></i></a></p>
+                <p><a href="https://www.instagram.com/blair_wangjy/?igsh=MTdzbGY3a21mNGQzdQ%3D%3D&utm_source=qr"><i class="fab fa-instagram"></i></a></p>
+                <p><a href="https://github.com/Jingyiii-W"><i class="fab fa-github"></i></a></p>
+                <p><a href="https://www.facebook.com/profile.php?id=100087989295204&mibextid=LQQJ4d"><i class="fab fa-facebook"></i></a></p>
+                <p><a href="https://x.com/whitenox0917"><i class="fab fa-twitter"></i></a></p>
+            </ul>
         </section>
     </div>
 
     <script src="javascript/script.js"></script>
+
+    <footer>
+        <p>&copy; 2024 Blair Wang. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
